<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/pressmebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:onClick="onPressMeButton"
        android:text="@string/pressmebtntxt" />

    <Button
        android:id="@+id/canyoupressmetoobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pressmebutton"
        android:layout_alignRight="@+id/pressmebutton"
        android:layout_below="@+id/pressmebutton"
        android:onClick="onCanYouPressMeTooBtn"
        android:text="@string/canpressmetoobtntxt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/canyoupressmetoobtn"
        android:layout_alignRight="@+id/canyoupressmetoobtn"
        android:layout_below="@+id/canyoupressmetoobtn"
        android:layout_marginTop="35dp"
        android:text="@string/showmeyournametxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" android:inputType="text">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/showmeyournamebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_centerVertical="true"
        android:onClick="onShowMeTheNameBtn"
        android:text="@string/showmethenamebtn" />

</RelativeLayout>